<resources>
    <string name="app_name">FastDelivery</string>
    <string name="hint_edtusername">Nhập tên đăng nhập</string>
    <string name="hint_edtpassword">Nhập mật khẩu</string>
    <string name="tv_forgotpass"><b><u>Quên mật khẩu?</u></b></string>
    <string name="tv_username">Tên đăng nhập</string>
    <string name="tv_password">Mật khẩu</string>
    <string name="name_btnlogin">Đăng nhập</string>
    <string name="tv_singup">Đăng ký</string>
    <string name="tv_comeback"><b><u>Đăng nhập</u></b></string>
    <string name="mess_logOut">Bạn có thực sự muốn đăng xuất?</string>
    <string name="action_account">Tài khoản</string>
    <string name="action_order">Đơn hàng</string>
    <string name="action_finance">Tài chính</string>
    <string name="action_area">Khu vực </string>
    <string name="ad_nav1_mainHome">Trang chính</string>
    <string name="ad_nav2_mainProfile">Thông tin cá nhân</string>
    <string name="ad_nav3_mainAccount">Đổi mật khẩu</string>
    <string name="ad_nav4_mainLogout">Đăng xuất</string>
    <string name="tv_help">Trợ giúp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pf_name">Họ và tên</string>
    <string name="header_username">Tên đăng nhập</string>
    <string name="pf_wh_name">Tên kho</string>
    <string name="pf_shop_name">Tên cửa hàng</string>
    <string name="pf_name_status">Tên trạng thái</string>
    <string name="pf_name_area">Tên khu vực</string>
    <string name="tv_app_nem">Giao hàng nhanh</string>
    <string name="tv_mass_list">Bảng giá khối lượng (kg)</string>
    <string name="tv_distance_list">Bảng giá khoảng cách (km)</string>
    <string name="tv_start_distance">Từ khoảng cách</string>
    <string name="tv_end_distance">Đến khoảng cách</string>
    <string name="tv_start_mass">Từ</string>
    <string name="tv_end_mass">Đến</string>
    <string name="tv_price_delivery">Cước phí</string>
    <string name="tv_item_mass">0</string>
    <string name="tv_dialog_mass">Nhập giá tiền bạn muốn thay đổi</string>
    <string name="tv_dialog_mass2">Giá tiền</string>
    <string name="tv_dialog_mass3">VND</string>
    <string name="tv_dialogOk">XÁC NHẬN</string>
    <string name="tv_dialogCancel">HỦY</string>
    <string name="tv_staff_search">Tìm kiếm theo mã nhân viên</string>
    <string name="tv_shop_search">Tìm kiếm theo mã cửa hàng</string>
    <string name="tv_warehouse_search">Tìm kiếm theo mã kho</string>
    <string name="tv_id">Mã</string>
    <string name="RemoveStaffFail">Bạn không thể xóa nhân viên này</string>
    <string name="AllRemoveStaff">Bạn có chắc chắn muốn xóa nhân viên này?</string>
    <string name="RemoveMass">Bạn có chắc chắn muốn xóa khối lượng này?</string>
    <string name="RemoveDistance">Bạn có chắc chắn muốn xóa khoảng cách này?</string>
    <string name="RemoveStaffSuccess">Xóa thành công</string>
    <string name="empty_price">Vui lòng điền giá tiền</string>
    <string name="RemoveMassSuccess">Xóa khối lượng thành công</string>
    <string name="AddMassSuccess">Thêm khối lượng thành công</string>
    <string name="massErorr">Khối lượng bắt đầu phải >= %1$s</string>
    <string name="distanceErorr">Khoảng cách bắt đầu phải >= %1$s</string>
    <string name="RemoveDistanceSuccess">Xóa khoảng cách thành công</string>
    <string name="AddDistanceSuccess">Thêm khoảng cách thành công</string>
    <string name="comtopareMassError">Khối lượng kết thúc phải lớn hơn khối lượng bắt đầu</string>
    <string name="comtopareDistanceError">Khoảng cách kết thúc phải lớn hơn khoảng cách bắt đầu</string>
    <string name="priceError">Giá tiền phải lớn hơn 0</string>
    <string name="tv_staffId">Mã nhân viên</string>
    <string name="tv_shopId">Mã cửa hàng</string>
    <string name="tv_staffCmnd">CMND</string>
    <string name="hint_staffCmnd">Nhập CMND</string>
    <string name="pf_birth">Ngày sinh</string>
    <string name="pf_gender">Giới tính</string>
    <string name="pf_phone">Số điện thoại</string>
    <string name="pf_hintPhone">Nhập số điện thoại</string>
    <string name="pf_hintName">Nhập họ và tên</string>
    <string name="pf_shopName">Nhập tên cửa hàng</string>
    <string name="pf_hintBirth">Chọn ngày sinh</string>
    <string name="tv_email">Email</string>
    <string name="hint_email">Nhập Email</string>
    <string name="pf_address">Địa chỉ</string>
    <string name="pf_hintAddress">Nhập địa chỉ</string>
    <string name="tv_role_Staff">Quyền</string>
    <string name="pf_male">Nam</string>
    <string name="pf_female">Nữ</string>
    <string name="tv_save">Cập nhật</string>
    <string name="tv_lock">Khóa tài khoản</string>
    <string name="tv_salary">Phát lương</string>
    <string name="tv_activi">Kích hoạt</string>
    <string name="tv_lock_success">Khóa tài khoản thành công</string>
    <string name="tv_activi_success">Kích hoạt tài khoản thành công</string>
    <string name="AddProfileSucces">Cập nhật hồ sơ thành công</string>
    <string name="tv_salary_exist">Nhân viên này đã được phát tiền lương tháng %1$s năm %2$s</string>
    <string name="tv_shipper_collection1">Số tiền đã thu hộ: %1$s và Phí giao hàng đã thu: %2$s</string>
    <string name="tv_shipper_collection2">Phí giao hàng đã thu: %1$s</string>
    <string name="tv_salary_staff">Phát tiền lương tháng %1$s năm %2$s thành công</string>
    <string name="tv_salary_shipper">Phát tiền lương và tiền hoa hồng tháng %1$s năm %2$s thành công</string>
    <string name="tv_save2">Thêm</string>
    <string name="tv_save4">Đăng ký</string>
    <string name="tv_save3">Lưu</string>
    <string name="tv_save5">Đổi mật khẩu</string>
    <string name="tv_warehouse">Kho</string>
    <string name="tv_rgt_staffSuccess">Thêm nhân viên thành công</string>
    <string name="tv_rgt_shopSuccess">Đăng ký thành công! Mời bạn đăng nhập</string>
    <string name="mes_assignment_success">Đã phân kho thành công</string>
    <string name="mes_way_parcel">Bưu kiện %1$s có lộ trình như sau:</string>
    <string name="tv_checkbox_warehouse">Tên kho</string>
    <string name="tv_number_parcel">Số lượng bưu kiện đang lưu kho</string>
    <string name="tv_parcel_way">Lộ trình của bưu kiện là:</string>
    <string name="mes_warehouse_empty">Vui lòng chọn kho</string>
    <string name="tv_radio_shipper">Tên shipper</string>
    <string name="tv_number_parcel_sp">Số lượng bưu kiện đang giao lấy</string>
    <string name="mess_cancel_parcel">Bạn có thực sự muốn từ chối lấy đơn hàng này?</string>
    <string name="mess_delete_area">Bạn có thực sự xóa khu vực làm việc này?</string>
    <string name="mess_register_area">Đăng ký khu vực thành công</string>
    <string name="mess_register_area_error">Khu vực này đã được đăng ký trước đó</string>
    <string name="mess_register_area_empty">Vui lòng chọn khu vực muốn đăng ký</string>
    <string name="title_changePw">Đổi mật khẩu</string>
    <string name="tv_currentPass">Mật khẩu cũ</string>
    <string name="tv_newPass">Mật khẩu mới</string>
    <string name="tv_confirmPass">Xác nhận mật khẩu mới</string>
    <string name="RemoveWHFail">Bạn không thể xóa kho hàng này</string>
    <string name="AllRemoveWH">Bạn có chắc chắn muốn xóa kho hàng này?</string>
    <string name="tv_rgt_WHSuccess">Thêm kho thành công</string>
    <string name="UpdateSucces">Cập nhật thành công</string>
    <string name="tv_dialog_status">Chọn trạng thái bạn muốn cập nhật</string>
    <string name="tv_home_role_st">NHÂN VIÊN KHO:</string>
    <string name="tv_home_role_sp">NHÂN VIÊN GIAO HÀNG:</string>
    <string name="tv_shop_role">CỬA HÀNG:</string>
    <string name="tv_warehouse_name">CHI NHÁNH:</string>
    <string name="tv_chooseStaff_mng">Quản lý nhân viên</string>
    <string name="tv_staff_mng">Quản lý nhân viên kho</string>
    <string name="tv_shipper_mng">Quản lý nhân viên giao hàng</string>
    <string name="tv_shop_mng">Quản lý cửa hàng</string>
    <string name="tv_warehouse_mng">Quản lý kho</string>
    <string name="login_empty">Tên đăng nhập và mật khẩu không được bỏ trống</string>
    <string name="wrong_account">Tên đăng nhập hoặc mật khẩu không đúng</string>
    <string name="lock_account">Tài khoản của bạn đã ngừng kích hoạt</string>
    <string name="title_activity_price">PriceActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="error_empty">Vui lòng không bỏ trống các thông tin</string>
    <string name="error_empty_status">Vui lòng chọn trạng thái cần cập nhật</string>
    <string name="error_empty_shipper">Vui lòng chọn nhân viên giao hàng</string>
    <string name="PhoneIllegal">Số điện thoại không hợp lệ</string>
    <string name="EmailIllegal">Email không hợp lệ</string>
    <string name="CmndIllegal">CMND không hợp lệ</string>
    <string name="PhoneExist">Số điện thoại này đã được sử dụng</string>
    <string name="EmailExist">Email này đã được sử dụng</string>
    <string name="CmndExist">CMND này đã được sử dụng</string>
    <string name="staffId_old">Ngày sinh không hợp lệ cần đủ 18 tuổi</string>
    <string name="UserIllegal">Tên đăng nhập tối thiểu tám ký tự, ít nhất một chữ cái và một số</string>
    <string name="AccountExist">Tên đăng nhập đã tồn tại</string>
    <string name="PassIllegal">Mât khẩu tối thiểu tám ký tự, ít nhất một chữ cái viết hoa, một chữ cái viết thường và một số</string>
    <string name="account_empty">Vui lòng không bỏ trống</string>
    <string name="account_errorConfirmPw">Xác nhận mật khẩu mới không đúng</string>
    <string name="account_errorCurrentPw">Mật khẩu cũ không đúng</string>
    <string name="account_changePwFail">Thay đổi mật khẩu thất bại</string>
    <string name="account_changePwSuccess">Thay đổi mật khẩu thành công</string>
    <string name="Account_not_exist">Tài khoản này không tồn tại</string>
    <string name="send_mail_success">Mật khẩu mới đã được gửi về mail</string>
    <string name="tv_id_pc">Mã bưu kiện</string>
    <string name="tv_status_pc">Trạng thái</string>
    <string name="tv_name_pc">Nguyễn Văn A</string>
    <string name="tv_phone_pc">09123048394</string>
    <string name="tv_date_pc">02-11-2022 08:00:00</string>
    <string name="btn_action_pc">Xác nhận</string>
    <string name="btn_route_pc">Xem lộ trình</string>
    <string name="btn_action2_pc">Đã lấy hàng</string>
    <string name="btn_update_status_pc">Cập nhật trạng thái</string>
    <string name="btn_cancel_pc">Từ chối lấy hàng</string>
    <string name="btn_cancel">Hủy</string>
    <string name="btn_find">Tìm kiếm</string>
    <string name="dateTo">Đến ngày</string>
    <string name="dateFrom">Từ ngày</string>
    <string name="sum_price">0đ</string>
    <string name="block">-</string>
    <string name="tv_sum">Tổng:</string>
    <string name="price_ship">Phí giao:</string>
    <string name="tv_stt_1">Số bưu kiện nhận từ cửa hàng:</string>
    <string name="tv_stt_2">Số bưu kiện giao thành công:</string>
    <string name="tv_stt_3">Số bưu kiện giao thất bại:</string>
    <string name="tv_stt_4">Số bưu kiện hoàn trả:</string>
    <string name="tv_stt_5">Số bưu kiện đang vận chuyễn:</string>
    <string name="tv_number">Số lượng</string>
    <string name="find_account">Tìm tài khoản của bạn</string>
    <string name="find_account2">Vui lòng nhập tên đăng nhập để tìm kiếm tài khoản của bạn.</string>
    <string name="tv_collection_shop">Danh sách tiền thu hộ cửa hàng</string>
    <string name="tv_sum_collection">Tổng thu hộ:</string>
    <string name="tv_price_collection">Số tiền</string>
</resources>