<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">


    <LinearLayout
        android:id="@+id/lnl_custom_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout style="@style/style_appBarLayout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_admin_parcel"
            style="@style/style_toolbar"
            app:titleTextColor="@color/white"
            app:title="Thống kê số liệu" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_minus5sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dateFrom"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:text="@string/dateFrom"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:text="@string/block"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dateTo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/dateTo"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stt_1"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

        <TextView
            android:id="@+id/tv_stt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:text="@string/tv_number"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stt_5"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

        <TextView
            android:id="@+id/tv_stt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_27sdp"
            android:text="@string/tv_number"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stt_2"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

        <TextView
            android:id="@+id/tv_stt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_33sdp"
            android:text="@string/tv_number"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stt_3"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

        <TextView
            android:id="@+id/tv_stt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_53sdp"
            android:text="@string/tv_number"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stt_4"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

        <TextView
            android:id="@+id/tv_stt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_77sdp"
            android:text="@string/tv_number"
            android:textStyle="bold"
            android:textColor="@color/color8"
            android:textSize="@dimen/_13sdp"/>

    </LinearLayout>

    <com.anychart.AnyChartView
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="400dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/tv_collection_shop"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/style_textview_login2"
                android:text="@string/tv_id"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10sdp"
                android:textStyle="italic" />

            <TextView
                style="@style/style_textview_login2"
                android:text="@string/tv_shopId"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10sdp"
                android:textStyle="italic" />

            <TextView
                style="@style/style_textview_login2"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/pf_shop_name"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                style="@style/style_textview_login2"
                android:layout_marginStart="@dimen/_40sdp"
                android:text="@string/tv_price_collection"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_list_collection"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_10sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                style="@style/style_textview_login2"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/tv_sum_collection"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/sum_money"
                style="@style/style_textview_login2"
                android:layout_marginStart="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:text="@string/sum_price"
                android:textColor="@color/red"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

</LinearLayout>
</ScrollView>