<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_update_price"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/tv_dialog_mass"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            style="@style/style_textview_login2"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/tv_dialog_mass2"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/edt_price"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:enabled="true"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/boder_rectangle2"
            android:textColor="@color/dark_green"
            android:hint="@string/tv_item_mass"
            android:textSize="@dimen/_15sdp" />

        <TextView
            style="@style/style_textview_login2"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/tv_dialog_mass3"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelDialog"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/tv_dialogCancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/okDialog"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/tv_dialogOk"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>


</LinearLayout>