<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv__id"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_35sdp"
            android:gravity="center"
            android:text="@string/tv_id"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_35sdp"
            android:gravity="center"
            android:text="@string/pf_shop_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_price1"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:gravity="center"
            android:text="@string/tv_sum"
            android:textColor="@color/red"
            android:textSize="@dimen/_12sdp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_price2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:gravity="center"
            android:text="@string/price_ship"
            android:textColor="@color/red"
            android:textSize="@dimen/_12sdp"
            android:background="@color/white" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#c0c0c0" />
</LinearLayout>