<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnl_forgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg3"
    android:orientation="vertical"
    tools:context=".screens.forgotPassword.ForgotPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout style="@style/style_appBarLayout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_admin_parcel"
            style="@style/style_toolbar"
            app:titleTextColor="@color/white"
            app:title="Quên mật khẩu" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_forgot1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/find_account"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_forgot2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/find_account2"
        android:gravity="center"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/_15sdp" />

    <androidx.cardview.widget.CardView
        style="@style/style_cardview_userlogin2"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:backgroundTint="@color/white">

        <ImageView
            android:id="@+id/imv_forgot"
            style="@style/style_imv_icon"
            android:background="@drawable/ic_baseline_account_circle_24" />

        <EditText
            android:id="@+id/edtUsername"
            style="@style/style_edt_login2"
            android:layout_marginStart="@dimen/_40sdp"
            android:background="@color/white"
            android:hint="@string/hint_edtusername"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_13sdp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_35sdp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button4"
            android:text="@string/tv_dialogCancel" />

        <Button
            android:id="@+id/btn_find"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/btn_find"
            android:background="@drawable/custom_button4"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        style="@style/style_textview_forgotpw"
        android:layout_marginStart="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_200sdp"
        android:text="@string/tv_comeback"
        android:textColor="@color/dark_green" />
</LinearLayout>