<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_send"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@drawable/boder_rectangle2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/color_main"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_checkbox_warehouse"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/tv_radio_shipper"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/tv_number_parcel_sp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_list_shipper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_5sdp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="@dimen/_125sdp"
            android:layout_height="@dimen/_30sdp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button4"
            android:text="@string/btn_action_pc" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:background="@drawable/custom_button4"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>


</LinearLayout>